--- a/style.css
+++ b/style.css
@@ -3,3 +3,20 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+#canvas {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+} 
+
+#three {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    pointer-events: none; 
+} 
